# scripts

./: .gitignore  Cargo.toml  flake.nix
anthropic_api/: Cargo.toml
anthropic_api/src/: client.rs  config.rs  lib.rs  message.rs
anthropic_api/src/snapshots/: anthropic_api__message__tests__message_request_builder.snap  anthropic_api__message__tests__message_request_builder_defaults.snap
modules/: nixos.nix
modules/summarize/: home.nix  nixos.nix
modules/yt-sub/: home.nix  nixos.nix
summarize/: Cargo.toml
summarize/src/: config.rs  main.rs
yt-sub/: Cargo.toml
yt-sub/src/: main.rs  youtube_id.rs
