[workspace]
resolver = "3"
members = ["summarize","yt-sub"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
winnow = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6.0"
atty = "0.2"
