[workspace]
resolver = "3"
members = ["anthropic_api","summarize","yt-sub"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
insta = {  version = "1.43", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
winnow = "0.7"
